--- a/Web.Statu/Views/Home/Hledat.cshtml
+++ b/Web.Statu/Views/Home/Hledat.cshtml
@@ -598,7 +598,7 @@
                                                             @foreach (var v in osoba1.Statistic(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).SoukromeFirmy.Take(3))
                                                             {
                                         <tr>
-                                            <td><a href="/subjekt/@v.Value.Subject().ICO">@(v.Value.Subject().Jmeno)</a></td>
+                                            <td>@Html.KIndexLabelLink(v.Value.Subject().ICO)<a href="/subjekt/@v.Value.Subject().ICO">@(v.Value.Subject().Jmeno)</a></td>
                                             <td class="cell-gray">@Html.Raw(v.Value.BasicStatPerYear.Summary.ToNiceString(v.Value.Subject(), true))</td>
                                         </tr>}
                                                         </tbody>
