--- a/Web.Statu/Views/Home/SubjektVazby.cshtml
+++ b/Web.Statu/Views/Home/SubjektVazby.cshtml
@@ -30,7 +30,7 @@
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
         <li>Úřady a firmy</li>
-        <li><a href="/Subjekt/@Model.ICO">@Model.Jmeno</a></li>
+        <li>@Html.KIndexLabelLink(Model.ICO)<a href="/Subjekt/@Model.ICO">@Model.Jmeno</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
     }
